<resources>
    <string name="appName">Project Organizer</string>
    <string name="imageContentDescription">image</string>
    <string name="letsGetStartedtext">Let\'s Get started</string>
    <string name="introtextDescription">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email id and password for signup</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="no_boards_are_available">No Boards are available!!!</string>
</resources>