<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroActivity"
    android:background="@drawable/intro_background"
    android:gravity="center">

    <TextView
        android:id="@+id/app_intro_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageContentDescription"
        android:src="@drawable/ic_task_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
        android:text="@string/letsGetStartedtext"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/lets_get_started_text_size" />


    <Button
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:gravity="center"
        android:text="@string/signIn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size" />


</LinearLayout>